# ws_dawa/src/api/Model/Request/registro_request.py
@@ -1,0 +1,10 @@
+from marshmallow import Schema, fields
+
+class RegistroRequest(Schema):
+    user_login = fields.String(required=True)
+    user_password = fields.String(required=True)
+    user_nombre = fields.String(required=True)
+    user_apellido = fields.String(required=True)
+    user_facultad = fields.String(required=True)
+    user_carrera = fields.String(required=True)
+    user_state = fields.Boolean(required=True)
