# ws_dawa/src/api/Routes/routes.py
@@ -1,4 +1,5 @@
 from ..Services.login_service import LoginService
+from ..Services.registro_service import RegistroService  # Importar RegistroService
 from ..Services.user_service import UserService
 from ..Services.publicaciones_services import PublicacionService
 from ..Services.posts_service import PublicacionListService
@@ -6,9 +7,16 @@ from ..Services.posts_service import PublicacionListService
 def load_routes(api):
     # Método para el login
     api.add_resource(LoginService, '/security/login')
+    # Método para el registro de usuarios
+    api.add_resource(RegistroService, '/user/register')  # Nueva ruta para el registro
     # Método para listar los usuarios
     api.add_resource(UserService, '/user/list')
     # Método para crear publicaciones
     api.add_resource(PublicacionService, '/security/publicacion')
     # Método para listar las publicaciones
     api.add_resource(PublicacionListService, '/publicaciones/list')
+
+    # Verificar las rutas registradas
+    print("Rutas registradas:")
+    for rule in api.app.url_map.iter_rules():
+        print(rule)
