# ws_dawa/static/swagger.json
@@ -182,6 +182,50 @@
           }
         }
       }
+    },
+    "/user/register": {
+      "post": {
+        "tags": [
+          "WS Security"
+        ],
+        "summary": "Registro de Usuario",
+        "description": "Registro de Usuario",
+        "operationId": "registerUser",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Datos del usuario a registrar",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/registerUserDef"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Operación exitosa",
+            "schema": {
+              "$ref": "#/definitions/Response"
+            }
+          },
+          "500": {
+            "description": "Error",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          },
+          "400": {
+            "description": "Not Found",
+            "schema": {
+              "$ref": "#/definitions/NotFound"
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -272,6 +316,48 @@
           "example": "200"
         }
       }
+    },
+    "registerUserDef": {
+      "type": "object",
+      "properties": {
+        "user_login": {
+          "type": "string",
+          "format": "string"
+        },
+        "user_password": {
+          "type": "string",
+          "format": "string"
+        },
+        "user_nombre": {
+          "type": "string",
+          "format": "string"
+        },
+        "user_apellido": {
+          "type": "string",
+          "format": "string"
+        },
+        "user_facultad": {
+          "type": "string",
+          "format": "string"
+        },
+        "user_carrera": {
+          "type": "string",
+          "format": "string"
+        },
+        "user_state": {
+          "type": "boolean",
+          "format": "boolean"
+        }
+      },
+      "required": [
+        "user_login",
+        "user_password",
+        "user_nombre",
+        "user_apellido",
+        "user_facultad",
+        "user_carrera",
+        "user_state"
+      ]
     }
   },
   "externalDocs": {
